[package]
name = "nocms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body = "0.4.5"
hyper = {version = "0.14", features = ["full"]}
rand = "0.8.5"
serde_json = "1.0.91"
sha2 = "0.10.6"
sqlite = "0.30.3"
tokio = {version = "1", features = ["full"]}
